--- a/Index.html
+++ b/Index.html
@@ -3,208 +3,188 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generador de Comandos - Rust Style</title>
-    <style>
-        body {
-            font-family: 'Press Start 2P', sans-serif; /* Estilo gaming */
-            background-color: #1e1e1e; /* Fondo oscuro */
-            color: #fff; /* Texto claro */
-            margin: 0;
-            padding: 20px;
-        }
-
-        h1 {
-            text-align: center;
-            font-size: 2.5em;
-            color: #FF4500; /* Naranja Rust */
-            text-shadow: 2px 2px 4px #000;
-        }
-
-        label {
-            display: block;
-            margin: 10px 0 5px;
-        }
-
-        input, select, button {
-            width: 100%;
-            padding: 10px;
-            margin: 5px 0 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #333; /* Fondo de campos */
-            color: #fff;
-            font-size: 1em;
-        }
-
-        button {
-            background-color: #FF4500; /* Naranja Rust */
-            color: white;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #E53E00; /* Hover más oscuro */
-        }
-
-        #command_list {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #292929; /* Cuadro oscuro */
-            border: 2px solid #FF4500; /* Borde naranja */
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.7); /* Sombra */
-        }
-
-        .command-item {
-            background-color: #444; /* Fondo de cada comando */
-            padding: 10px;
-            margin: 5px 0;
-            border-radius: 5px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border: 1px solid #FF4500; /* Borde de comandos */
-        }
-
-        .command-text {
-            flex-grow: 1;
-            margin-right: 10px;
-        }
-
-        .command-actions {
-            display: flex;
-            gap: 5px;
-        }
-
-        .copied-message {
-            color: #28a745;
-            font-weight: bold;
-        }
-
-        footer {
-            text-align: center;
-            color: #EAEAEA;
-            font-size: 0.8em;
-            margin-top: 40px;
-        }
-    </style>
+    <title>Generador de Kits</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Generador de Kits</h1>
 
-    <label for="item_category">Seleccionar categoría:</label>
-    <select id="item_category" onchange="updateItemList()">
-        <option value="none">Seleccione una categoría</option>
-        <option value="ammo">Ammo</option>
-        <option value="weapons">Armas</option>
-        <option value="construction">Items de Construcción</option>
-        <option value="attire">Attire</option>
-        <option value="tools">Tools</option>
-        <option value="medsAndTeas">Meds and Teas</option>
-        <option value="trapsAndMiscellaneous">Traps and Miscellaneous</option>
-        <option value="components">Components</option>
-        <option value="electrical">Electrical</option>
-    </select>
+    <div class="section">
+        <h2>Selecciona una sección: Construcción</h2>
+        <button id="selectConstruction">Construcción</button>
+    </div>
 
-    <label for="item_list">Seleccionar ítem:</label>
-    <select id="item_list" onchange="showItemDetails()">
-        <option value="none">Seleccione un ítem</option>
-    </select>
+    <div class="form" id="constructionForm" style="display: none;">
+        <h3>Formulario de Construcción</h3>
 
-    <label for="selected_item_name">Nombre del ítem seleccionado:</label>
-    <input type="text" id="selected_item_name" readonly placeholder="Nombre del ítem seleccionado" />
+        <label for="kit_name">Nombre del Kit:</label>
+        <input type="text" id="kit_name" placeholder="Ejemplo: Kit de Construcción">
 
-    <label for="selected_item_id">ID del ítem seleccionado:</label>
-    <input type="text" id="selected_item_id" readonly placeholder="ID del ítem seleccionado" />
+        <label for="select_kaosbot">O elige un nombre del Kaosbot:</label>
+        <select id="select_kaosbot">
+            <option value="none">Seleccione un nombre</option>
+            <option value="freekit">Freekit</option>
+            <option value="freekit2">Freekit2</option>
+            <option value="vipkit">Vipkit</option>
+            <option value="elitekit1">Elitekit1</option>
+            <option value="elitekit2">Elitekit2</option>
+            <option value="elitekit3">Elitekit3</option>
+            <option value="elitekit4">Elitekit4</option>
+            <option value="elitekit5">Elitekit5</option>
+            <option value="elitekit6">Elitekit6</option>
+            <option value="elitekit7">Elitekit7</option>
+            <option value="elitekit8">Elitekit8</option>
+            <option value="elitekit9">Elitekit9</option>
+            <option value="elitekit10">Elitekit10</option>
+            <option value="elitekit11">Elitekit11</option>
+            <option value="elitekit12">Elitekit12</option>
+            <option value="elitekit13">Elitekit13</option>
+            <option value="elitekit14">Elitekit14</option>
+            <option value="elitekit15">Elitekit15</option>
+            <option value="elitekit16">Elitekit16</option>
+            <option value="elitekit17">Elitekit17</option>
+            <option value="elitekit18">Elitekit18</option>
+            <option value="elitekit19">Elitekit19</option>
+            <option value="elitekit20">Elitekit20</option>
+            <option value="elitekit21">Elitekit21</option>
+            <option value="elitekit22">Elitekit22</option>
+        </select>
 
-    <label for="kit_name">Nombre del Kit:</label>
-    <input type="text" id="kit_name" placeholder="Escribe el nombre del kit" required>
+        <label for="constructionItems">Elige un ítem:</label>
+        <select id="constructionItems">
+            <option value="door.wood">Wooden Door</option>
+            <option value="door.double.hinged.toptier">Armored Double Door</option>
+            <option value="door.hinged">Hinged Door</option>
+            <option value="door.double.hinged">Double Hinged Door</option>
+            <option value="foundation">Foundation</option>
+            <option value="wall">Wall</option>
+            <option value="floor">Floor</option>
+            <option value="roof">Roof</option>
+            <option value="window">Window</option>
+            <option value="stair">Stair</option>
+            <option value="ladder">Ladder</option>
+            <option value="ceiling">Ceiling</option>
+            <option value="hatch">Hatch</option>
+            <option value="floor.tiers">Floor Tier</option>
+        </select>
 
-    <label for="quantity">Cantidad:</label>
-    <input type="number" id="quantity" min="1" value="1" required>
-        
-    <label for="location">Ubicación:</label>
-    <select id="location">
-        <option value="Main">Main</option>
-        <option value="Belt">Belt</option>
-        <option value="Wear">Wear</option>
-    </select>
+        <label for="constructionQuantity">Cantidad:</label>
+        <input type="number" id="constructionQuantity" value="1" min="1">
 
-    <button onclick="addToKit()">Añadir al Kit</button>
-    <button onclick="generateAllCommands()">Generar Todos los Comandos</button>
-    
+        <label for="constructionLocation">Ubicación:</label>
+        <select id="constructionLocation">
+            <option value="Main">Main</option>
+            <option value="Belt">Belt</option>
+            <option value="Wear">Wear</option>
+        </select>
+
+        <button id="submitConstruction">Añadir al Kit</button>
+
+        <div id="constructionResult"></div>
+    </div>
+
+    <div class="section">
+        <h2>Selecciona una sección: Atuendos</h2>
+        <button id="selectOutfits">Atuendos</button>
+    </div>
+
+    <div class="form" id="outfitsForm" style="display: none;">
+        <h3>Formulario de Atuendos</h3>
+
+        <label for="kit_name_outfit">Nombre del Kit:</label>
+        <input type="text" id="kit_name_outfit" placeholder="Ejemplo: Kit de Atuendos">
+
+        <label for="outfitItems">Elige un ítem:</label>
+        <select id="outfitItems">
+            <option value="armor.wood">Wood Armor</option>
+            <option value="armor.leather">Leather Armor</option>
+            <option value="armor.tactical">Tactical Armor</option>
+            <option value="armor.heavy">Heavy Armor</option>
+            <option value="clothing.helmet">Helmet</option>
+            <option value="clothing.jacket">Jacket</option>
+            <option value="clothing.pants">Pants</option>
+            <option value="clothing.boots">Boots</option>
+            <option value="clothing.mask">Mask</option>
+            <option value="clothing.bonniehat">Bonnie Hat</option>
+            <option value="clothing.bonehat">Bone Helmet</option>
+            <option value="clothing.fur">Fur Armor</option>
+            <option value="clothing.ghillie">Ghillie Suit</option>
+        </select>
+
+        <label for="outfitQuantity">Cantidad:</label>
+        <input type="number" id="outfitQuantity" value="1" min="1">
+
+        <label for="outfitLocation">Ubicación:</label>
+        <select id="outfitLocation">
+            <option value="Main">Main</option>
+            <option value="Belt">Belt</option>
+            <option value="Wear">Wear</option>
+        </select>
+
+        <button id="submitOutfits">Añadir al Kit</button>
+
+        <div id="outfitsResult"></div>
+    </div>
+
     <div id="command_list"></div>
 
-    <!-- Incluir el script externo items.js -->
-    <script src="Items.js"></script>
     <script>
         const commands = [];
 
-        function updateItemList() {
-            const category = document.getElementById('item_category').value;
-            const itemList = document.getElementById('item_list');
+        document.getElementById('selectConstruction').addEventListener('click', function() {
+            document.getElementById('constructionForm').style.display = 'block';
+            document.getElementById('outfitsForm').style.display = 'none';
+        });
 
-            // Limpiar las opciones actuales
-            itemList.innerHTML = '<option value="none">Seleccione un ítem</option>';
-            document.getElementById('selected_item_name').value = ''; // Limpiar el campo de nombre
-            document.getElementById('selected_item_id').value = ''; // Limpiar el campo de ID
+        document.getElementById('selectOutfits').addEventListener('click', function() {
+            document.getElementById('outfitsForm').style.display = 'block';
+            document.getElementById('constructionForm').style.display = 'none';
+        });
 
-            // Añadir ítems según la categoría seleccionada
-            if (items[category]) {
-                items[category].forEach(item => {
-                    const option = document.createElement('option');
-                    option.value = item.id;
-                    option.textContent = item.name;
-                    itemList.appendChild(option);
-                });
-            } else {
-                console.log("Categoría seleccionada inválida o sin ítems.");
-            }
-        }
+        document.getElementById('submitConstruction').addEventListener('click', function() {
+            const kitName = document.getElementById('kit_name').value || document.getElementById('select_kaosbot').value;
+            const item = document.getElementById('constructionItems').value;
+            const quantity = document.getElementById('constructionQuantity').value;
+            const location = document.getElementById('constructionLocation').value;
 
-        function showItemDetails() {
-            const itemList = document.getElementById('item_list');
-            const selectedItemName = document.getElementById('selected_item_name');
-            const selectedItemId = document.getElementById('selected_item_id');
-            const selectedCategory = document.getElementById('item_category').value;
-
-            const selectedItem = items[selectedCategory].find(item => item.id === itemList.value);
-
-            if (selectedItem) {
-                selectedItemName.value = selectedItem.name;
-                selectedItemId.value = selectedItem.id;
-            } else {
-                selectedItemName.value = '';
-                selectedItemId.value = '';
-            }
-        }
-
-        function addToKit() {
-            const kitName = document.getElementById('kit_name').value;
-            const itemId = document.getElementById('selected_item_id').value;
-            const quantity = document.getElementById('quantity').value;
-            const location = document.getElementById('location').value;
-
-            if (!kitName || !itemId || !quantity || !location) {
+            if (!kitName || !item || !quantity || !location) {
                 alert('Por favor, completa todos los campos.');
                 return;
             }
 
-            const command = `kit add ${kitName} ${itemId} ${quantity} ${location}`;
+            const command = `kit add "${kitName}" "${item}" ${quantity} 1 "${location}"`;
             commands.push(command);
             localStorage.setItem('commands', JSON.stringify(commands));
             displayCommands();
-        }
+        });
 
-        function generateAllCommands() {
+        document.getElementById('submitOutfits').addEventListener('click', function() {
+            const kitName = document.getElementById('kit_name_outfit').value || document.getElementById('select_kaosbot').value;
+            const item = document.getElementById('outfitItems').value;
+            const quantity = document.getElementById('outfitQuantity').value;
+            const location = document.getElementById('outfitLocation').value;
+
+            if (!kitName || !item || !quantity || !location) {
+                alert('Por favor, completa todos los campos.');
+                return;
+            }
+
+            const command = `kit add "${kitName}" "${item}" ${quantity} 1 "${location}"`;
+            commands.push(command);
+            localStorage.setItem('commands', JSON.stringify(commands));
+            displayCommands();
+        });
+
+        function displayCommands() {
             const commandList = document.getElementById('command_list');
-            commandList.innerHTML = '';
+            commandList.innerHTML = ''; // Limpiar lista existente
 
             commands.forEach((cmd, index) => {
                 const commandItem = document.createElement('div');
                 commandItem.className = 'command-item';
                 commandItem.innerHTML = `
                     <span class="command-text">${cmd}</span>
+                                        <span class="command-text">${cmd}</span>
                     <div class="command-actions">
                         <button onclick="copyCommand(${index})">Copiar</button>
                         <button onclick="deleteCommand(${index})">Eliminar</button>
@@ -222,30 +202,21 @@
             document.execCommand('copy');
             document.body.removeChild(tempInput);
             alert('Comando copiado: ' + commands[index]);
-
-            const commandItem = document.querySelectorAll('.command-item')[index];
-            const copiedMessage = document.createElement('span');
-            copiedMessage.className = 'copied-message';
-            copiedMessage.textContent = ' - Ya copiado';
-            commandItem.appendChild(copiedMessage);
         }
 
         function deleteCommand(index) {
             commands.splice(index, 1);
             localStorage.setItem('commands', JSON.stringify(commands));
-            generateAllCommands();
+            displayCommands();
         }
 
         window.onload = function() {
             const savedCommands = localStorage.getItem('commands');
             if (savedCommands) {
                 commands.push(...JSON.parse(savedCommands));
-                generateAllCommands();
+                displayCommands();
             }
         };
     </script>
-    <footer>
-        <p>Hecho por VieraGuti</p>
-    </footer>
 </body>
 </html>
